should probably run tests before publishing, since we're generating a file

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "lein cljsbuild auto dev",
     "test": "mocha",
     "repl": "./scripts/repl",
-    "prepublish": "npm run clean && npm run build"
+    "prepublish": "npm run clean && npm run build && npm test"
   },
   "repository": {
     "type": "git",
